sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:5: error: not found: value getnombreValeurs
var fin = getnombreValeurs()-2
          ^AlgCocktailSort2:6: error: not found: value a
while (a==true | b==true){
       ^AlgCocktailSort2:6: error: not found: value b
while (a==true | b==true){
                 ^AlgCocktailSort2:7: error: not found: value a
  a= false
  ^AlgCocktailSort2:8: error: not found: value b
  b= false
  ^AlgCocktailSort2:12: error: not found: value a
    	a=true
        ^AlgCocktailSort2:18: error: not found: value b
      b=true
      ^